Fix errors/warnings when changing content root and stop thin code blocks wrapping

--- a/themes/Default/less/small.less
+++ b/themes/Default/less/small.less
@@ -15,6 +15,18 @@
 }
 
 
+/* Code
+-------------------------------------------------- */
+
+pre {
+	overflow: auto;
+
+	code {
+		min-width: 700px;
+	}
+}
+
+
 /* Header
 -------------------------------------------------- */
 
